--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fit-and-track",
   "version": "1.0.0",
-  "description": "",
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "server/server.js",
   "scripts": {
     "start": "node server/server.js",
@@ -16,8 +16,28 @@
     "concurrently": "^5.1.0"
   },
   "dependencies": {
-    "apollo-server-express": "^2.25.3",
-    "express": "^4.17.2",
-    "graphql": "^15.8.0"
-  }
+    "apollo-server-express": "^3.10.0",
+    "axios": "^0.27.2",
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
+    "graphql": "^15.8.0",
+    "jest-dom": "^4.0.0",
+    "nodemon": "^2.0.19",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "^5.0.1",
+    "react-stripe-checkout": "^2.6.3",
+    "save": "^2.5.0",
+    "stripe": "^10.0.0",
+    "user-event": "^4.0.0",
+    "uuid": "^8.3.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Anisha-C/Fit-and-Track.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Anisha-C/Fit-and-Track/issues"
+  },
+  "homepage": "https://github.com/Anisha-C/Fit-and-Track#readme"
 }
